--- a/develop/scss/variables.scss
+++ b/develop/scss/variables.scss
@@ -7,6 +7,8 @@ $base-font-size: 16px;
 $font: 'Montserrat', Helvetica, Arial, sans-serif;
 
 $theme-color: #fed63f;
+$liberty-theme: #8f6d00;
+
 $text-color: #000;
 $text-color-light: #a5a5a5;
 $text-color-medium: #9c9c9c;
