--- a/develop/blocks/main-footer/main-footer.pug
+++ b/develop/blocks/main-footer/main-footer.pug
@@ -3,27 +3,31 @@ mixin main-footer()
         block
         +inner
             +e.inner
-                +e.col
-                    +e.menu
-                        +footer-nav
-                +e.col
-                    +e.FORM.appeal
-                        +e.title Подписаться на новости
-                        +e.appeal-row
-                            +e.appeal-block
-                                +e.appeal-input
-                                    +base-input('email', 'footerEmail', 'footer_email', 'Введите e-mail', true)
-                                +e.P.appeal-tip Рассылка приходит раз в неделю
-                            +e.BUTTON.appeal-submit.btn.btn--small(type='submit') Отправить
-                    +e.socials
-                        +e.title Подписаться на наши соц. сети
-                        +e.UL.socials-list
-                            +e.LI.socials-item
-                                +e.A.socials-link(href='#')
-                                    +icon('youtube')
-                            +e.LI.socials-item
-                                +e.A.socials-link(href='#')
-                                    +icon('facebook')
-                            +e.LI.socials-item
-                                +e.A.socials-link(href='#')
-                                    +icon('instagram')
+                +e.top-row
+                    +e.col
+                        +e.menu
+                            +footer-nav
+                    +e.col
+                        +e.FORM.appeal
+                            +e.title Подписаться на новости
+                            +e.appeal-row
+                                +e.appeal-block
+                                    +e.appeal-input
+                                        +base-input('email', 'footerEmail', 'footer_email', 'Введите e-mail', true)
+                                    +e.P.appeal-tip Рассылка приходит раз в неделю
+                                +e.BUTTON.appeal-submit.btn.btn--small(type='submit') Отправить
+                        +e.socials
+                            +e.title Подписаться на наши соц. сети
+                            +e.UL.socials-list
+                                +e.LI.socials-item
+                                    +e.A.socials-link(href='#')
+                                        +icon('youtube')
+                                +e.LI.socials-item
+                                    +e.A.socials-link(href='#')
+                                        +icon('facebook')
+                                +e.LI.socials-item
+                                    +e.A.socials-link(href='#')
+                                        +icon('instagram')
+                +e.P.info
+                    | Стоимость инвестиционных паев может увеличиваться и уменьшаться, результаты инвестирования в прошлом не определяют доходы в будущем, AKTIVO не гарантирует доходность инвестиций. Информация об инвестиционных фондах, объектах недвижимости, экономические показатели, а также любые аналитические и информационные данные предоставлены ООО «Активо» на правах пайщика указанных закрытых паевых инвестиционных фондов. Вся информация, содержащаяся в маркетинговых и иных материалах ООО «Активо», в том числе о будущей доходности паев ЗПИФН, является предположительной. Для более точной оценки перед принятием решения о покупке паев мы настоятельно рекомендуем самостоятельно изучать объект инвестирования или обратиться к финансовому советнику. Все финансовые расчеты и модели являются только прогнозом, за достоверность которого ООО «Активо» не несет ответственности. ООО «Активо» ни при каких обстоятельствах не гарантирует доход по паям инвестору, а также не гарантирует ликвидность паев: не обещает и не предлагает обратный выкуп паев фонда.
+                +e.P.legal © 2020 ООО «Активо». Все права защищены
