--- a/develop/blocks/lines/lines.scss
+++ b/develop/blocks/lines/lines.scss
@@ -65,6 +65,12 @@
             }
         }
 
+        &.only-sides {
+            .line {
+                display: none;
+            }
+        }
+
         .line {
             position: absolute;
             width: calc((100% - 68px) / 3);
