--- a/develop/blocks/main-footer/main-footer.scss
+++ b/develop/blocks/main-footer/main-footer.scss
@@ -95,6 +95,10 @@
             &::after {
                 display: none;
             }
+
+            &.show-right::after {
+                display: block;
+            }
         }
 
         &__top-row {
