--- a/develop/blocks/title/title.pug
+++ b/develop/blocks/title/title.pug
@@ -1,10 +1,10 @@
 mixin title(tag = 'h2', mod)
     if (tag === 'h1')
-        +b.H1.title.--main(class=mod)
+        +b.H1.title(class=mod)
             block
     else if (tag === 'h2')
         +b.H2.title(class=mod )
             block
     else if (tag === 'h3')
-        +b.H3.title.--small(class=mod )
+        +b.H3.title(class=mod )
             block
