--- a/develop/blocks/project-appeal/project-appeal.pug
+++ b/develop/blocks/project-appeal/project-appeal.pug
@@ -7,7 +7,7 @@ mixin project-appeal()
                     +e.title
                         +title('h2', 'light')
                             | Начните <br>зарабатывать <br> c лидером <br> краудфандинга <br>в России
-                    +e.BUTTON.button.btn(type='button') Оставить заявку
+                    +e.BUTTON.button.btn(type='button' data-scroll-to='projectCalc') Оставить заявку
                     +e.duration
                         span.value 90 дней
                         span.label срок закрытия <br>сделки
