--- a/develop/blocks/project-calc/project-calc.scss
+++ b/develop/blocks/project-calc/project-calc.scss
@@ -137,6 +137,10 @@
         &__result-value {
             font-size: 54px;
         }
+
+        &__button {
+            min-width: 290px;
+        }
     }
 }
 @media #{$desktop} {
