--- a/develop/blocks/project-top/project-top.pug
+++ b/develop/blocks/project-top/project-top.pug
@@ -7,7 +7,7 @@ mixin project-top()
                     +title('h1', 'light')
                         | Простой <br>и надежный<br>способ продать<br> недвижимость
                 +e.row
-                    +e.BUTTON.button.btn(type='button') Оставить заявку
+                    +e.BUTTON.button.btn(type='button' data-scroll-to='projectCalc') Оставить заявку
                     +e.UL.advantages
                         +e.LI.advantages-item
                             +e.SPAN.advantage-value до 2 млрд.&nbsp;₽
