--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3024,6 +3024,8 @@ th {
   z-index: 9;
   width: 100%;
   height: 100%; }
+  .index-slider:not(.slick-initialized) {
+    overflow: hidden; }
   .index-slider .slick-list,
   .index-slider .slick-track {
     width: 100%;
@@ -3057,7 +3059,8 @@ th {
       left: auto;
       right: 28px; }
   .index-slider__slide {
-    position: relative; }
+    position: relative;
+    height: 100%; }
   .index-slider__image {
     position: absolute;
     width: 100%;
@@ -4507,6 +4510,7 @@ th {
        -moz-box-direction: normal;
         -ms-flex-flow: column nowrap;
             flex-flow: column nowrap;
+    color: #000;
     overflow-y: auto;
     background-color: #fff; }
   .modal__close {
@@ -4641,8 +4645,21 @@ th {
         transition: opacity 300ms ease; }
   .modal__submit {
     margin-top: 30px;
-    margin-bottom: 50px; }
+    margin-bottom: 20px; }
+  .modal__text-field {
+    margin: 20px 0;
+    font-size: 16px;
+    line-height: 1.4; }
+    .modal__text-field a {
+      color: #fed63f;
+      text-decoration: underline;
+      -webkit-transition: opacity 300ms ease;
+      -moz-transition: opacity 300ms ease;
+      transition: opacity 300ms ease; }
+      .modal__text-field a:hover, .modal__text-field a:active, .modal__text-field a:focus {
+        opacity: 0.6; }
   .modal__legal {
+    padding-top: 35px;
     margin: auto 0 0;
     font-size: 10px;
     line-height: 1.6; }
@@ -6469,7 +6486,9 @@ th {
   .project-calc__result-row {
     margin-bottom: 32px; }
   .project-calc__result-value {
-    font-size: 54px; } }
+    font-size: 54px; }
+  .project-calc__button {
+    min-width: 290px; } }
 
 @media (min-width: 1200px) {
   .project-calc {
