--- a/develop/blocks/index-slider/index-slider.scss
+++ b/develop/blocks/index-slider/index-slider.scss
@@ -3,6 +3,10 @@
     z-index: 9;
     width: 100%;
     height: 100%;
+    
+    &:not(.slick-initialized) {
+        overflow: hidden;
+    }
 
     .slick-list,
     .slick-track {
@@ -39,6 +43,7 @@
 
     &__slide {
         position: relative;
+        height: 100%;
     }
 
     &__image {
