--- a/develop/blocks/modal/modal.scss
+++ b/develop/blocks/modal/modal.scss
@@ -51,8 +51,11 @@
         display: flex;
         flex-flow: column nowrap;
 
+        color: $text-color;
+
         overflow-y: auto;
         background-color: #fff;
+
     }
 
     &__close {
@@ -201,10 +204,31 @@
 
     &__submit {
         margin-top: 30px;
-        margin-bottom: 50px;
+        margin-bottom: 20px;
+    }
+
+    &__text-field {
+        margin: 20px 0;
+
+        font-size: 16px;
+        line-height: 1.4;
+
+        a {
+            color: $theme-color;
+            text-decoration: underline;
+
+            transition: opacity 300ms ease;
+
+            &:hover,
+            &:active,
+            &:focus {
+                opacity: 0.6;
+            }
+        }
     }
 
     &__legal {
+        padding-top: 35px;
         margin: auto 0 0;
 
         font-size: 10px;
