--- a/develop/blocks/best-objects/best-objects.pug
+++ b/develop/blocks/best-objects/best-objects.pug
@@ -31,3 +31,9 @@ mixin best-objects()
                             +best-object-card(2, '«Перекресток»', '93,3%')(data-rate='93.3')
                         +e.object
                             +best-object-card(1, '«Эко Видное»', '77,3%')(data-rate='77.3')
+                        +e.object
+                            +best-object-card(1, '«Эко Видное»', '87,4%')(data-rate='87.4')
+                        +e.object
+                            +best-object-card(2, '«Перекресток»', '93,3%')(data-rate='93.3')
+                        +e.object
+                            +best-object-card(1, '«Эко Видное»', '77,3%')(data-rate='77.3')
